# ChangeLog for media-libs/libgpod
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/ChangeLog,v 1.75 2010/09/05 12:06:06 ford_prefect Exp $

*libgpod-0.7.94 (05 Sep 2010)

  05 Sep 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +libgpod-0.7.94.ebuild:
  Bump to 0.7.94. Lots of fixes, and adds C# bindings (enabled with
  USE=mono).

  30 Aug 2010; Fabio Erculiani <lxnay@gentoo.org> libgpod-0.7.93.ebuild:
  fix libimobiledevice dependency, it's also a RDEPEND

  28 May 2010; Markus Meier <maekke@gentoo.org> libgpod-0.7.93.ebuild:
  add ~x86, bug #313691

  09 May 2010; Raúl Porcel <armin76@gentoo.org> libgpod-0.7.2.ebuild:
  Drop ia64/sparc keyword

  07 Apr 2010; Olivier Crête <tester@gentoo.org> libgpod-0.7.93.ebuild:
  Remove useless dep on taglib

*libgpod-0.7.93 (07 Apr 2010)

  07 Apr 2010; Olivier Crête <tester@gentoo.org> +libgpod-0.7.93.ebuild,
  metadata.xml:
  Version bump, bug #311093

  08 Dec 2009; Jeroen Roovers <jer@gentoo.org> libgpod-0.7.2.ebuild:
  Stable for HPPA (bug #289703).

  27 Sep 2009; Brent Baude <ranger@gentoo.org> libgpod-0.7.2.ebuild:
  stable ppc64, bug 271496

  01 Jul 2009; Jeroen Roovers <jer@gentoo.org> libgpod-0.7.2.ebuild:
  Marked ~hppa (bug #274984).

  02 Jun 2009; Raúl Porcel <armin76@gentoo.org> libgpod-0.7.2.ebuild:
  sparc stable wrt #271496

  01 Jun 2009; Markus Meier <maekke@gentoo.org> libgpod-0.7.2.ebuild:
  x86 stable, bug #271496

  31 May 2009; Brent Baude <ranger@gentoo.org> libgpod-0.7.0.ebuild:
  stable ppc64, bug 271496

  31 May 2009; nixnut <nixnut@gentoo.org> libgpod-0.7.2.ebuild:
  ppc stable #271496

  29 May 2009; Olivier Crête <tester@gentoo.org> libgpod-0.7.2.ebuild:
  amd64 stable

  29 May 2009; Olivier Crête <tester@gentoo.org> libgpod-0.7.2.ebuild:
  amd64 stable

  25 May 2009; Christian Faulhammer <fauli@gentoo.org> libgpod-0.7.0.ebuild:
  stable x86, bug 271218

  28 Apr 2009; Olivier Crête <tester@gentoo.org>