@@ -1,6 +1,6 @@
 AUX atanks-4.6-build.patch 5477 RMD160 2ccb1e58976e3c3d67ee2f37d8886596f51bd581 SHA1 90df1333e39bb6ac913faf02906273817ed0f0a2 SHA256 7f2962bd876c3b12578bab416e1c204fc10e2948a1b762758ee59badee121ca2
 AUX atanks-4.6-glibc212.patch 214 RMD160 8b6bfee0dc5647bb0b86a6e10b08a02203821b95 SHA1 bb8fc42df9578bf2f4e592035bd176df228c894e SHA256 8f51b92cf1a6a20b50ac14ba31957719d145513c96e9a9398286ffcc88a8708f
-AUX atanks-4.7-build.patch 5477 RMD160 2ccb1e58976e3c3d67ee2f37d8886596f51bd581 SHA1 90df1333e39bb6ac913faf02906273817ed0f0a2 SHA256 7f2962bd876c3b12578bab416e1c204fc10e2948a1b762758ee59badee121ca2
+AUX atanks-4.7-build.patch 5474 RMD160 98003db7b9c630f5dfe0de5f2e5ca3ee6d200857 SHA1 4371c6d18b8109a0e727690a2e1e975c93dc002f SHA256 f4dc5b4d891a771362fff418e156c46bd9aee9cd69f0774f5ff58b7e33ec41ef
 DIST atanks-4.6.tar.gz 3118071 RMD160 8e7b48d6e27f060d22a3a980ca633c810b1d9501 SHA1 3c02683fd9aef76c5976f7c8f919a59ff7604aae SHA256 230fd102ffca083e30187c9fc86c098446f532a8cca5c035f852f7da5eb81a77
 DIST atanks-4.7.tar.gz 3114429 RMD160 027546c34d4fc4bcfac3e116fcf12ec16ee44ed2 SHA1 bcb731c2c84d16efa1930fde8756b62c28993b24 SHA256 300be923cd6f4b7eb19c5f39db1dc001da2ee6c52f544c768e059dc5ad42a94d
 EBUILD atanks-4.6.ebuild 1072 RMD160 b9967fd7aed80b3a8d57a48092174dee55b7ea64 SHA1 1ea8b28f2aa08219aa0cd5511b2ff79770e67ec5 SHA256 443b8639b61e6af8c6014b439af478c1f5cbabf215ff92eb931f4297fc558cc2
