@@ -4,6 +4,6 @@ DIST libgpod-0.7.93.tar.gz 943096 RMD160 b464e936615acd69f35d64e3a78c735feab2357
 DIST libgpod-0.7.94.tar.gz 972479 RMD160 b2ad68dd63022b4e5ceb8c8fcf385dca3ec428ce SHA1 8cdfc142c14c594856755c8084d3cccf4dfdf2b2 SHA256 64f6402e63b80e3773840074c81071dae1836b13ea6f22e7867e4d746db9462f
 EBUILD libgpod-0.7.2.ebuild 1188 RMD160 ea434ba61fea3eaa64736bfad40cc1b560c81142 SHA1 0a336e91b6fd29913c96e97f2c3511f9d34a3488 SHA256 a0c8bea80590507ff91687ec15696cd998b469b0ea6ff992d5d7d249e1763b2f
 EBUILD libgpod-0.7.93.ebuild 1166 RMD160 02fafc6190acc198eb5eeef79c066a7c9f8c0c1f SHA1 a773885db889ef297839af3a3310c98ef129a848 SHA256 cf6c99024e809de2b9738cd10f93c56f2461a8302022f97bcdc06893c6e45863
-EBUILD libgpod-0.7.94.ebuild 1262 RMD160 fd0895de6ca7cf4dee802f03cda95fcdd06bee0a SHA1 8b9e51ee895eec2e93a0cd6c342258e0661dcd99 SHA256 33e3c26833de20800aac46fc59ac375d3adc6b33f256cfbfa1f4ba31acb7ec25
-MISC ChangeLog 9579 RMD160 3a00b10d9d54c99324f75fc92422e2148d5c7ab4 SHA1 1c86ce81dcde116a12057a3c6527df0c99604616 SHA256 85b928ee8ca55db4988583377e1fd895d73f6a077e98a519266947a4775ef9b4
+EBUILD libgpod-0.7.94.ebuild 1267 RMD160 94d543b3103497370c2fbb0413872bc2162876bd SHA1 c7472a8624ebe20727be70408f43d950d07b18e8 SHA256 3a76242d6eba3ddf6491f5e0787243da4b6758c3f20c78acdf6b8934078125e7
+MISC ChangeLog 9704 RMD160 d1de3b2e6508623a2d48daff61890793eef90817 SHA1 6eab897b75e1d93e96b2049bdc6c960f434e8370 SHA256 c5f144a5b050ed11d5a5321d398debe64f8bdd67ae62d156d9427de2706721e6
 MISC metadata.xml 653 RMD160 8ef4ab7ce89f104bc526ad330812a4a22a123f35 SHA1 8b1393230c18bb017d645c36ca714a162593a705 SHA256 f84d1024768c1ee90f399597ac2d39a4a75292c356c7589b7f2aa84ecbbacde0
