@@ -7,7 +7,7 @@ http://www.gtkpod.org/libgpod/
 LGPL-2
 Shared library to access the contents of an iPod
 ~amd64 ~x86
-eutils multilib portability toolchain-funcs
+eutils mono multilib portability toolchain-funcs
 +gtk python +udev iphone mono
 
 
