@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libgpod
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/ChangeLog,v 1.75 2010/09/05 12:06:06 ford_prefect Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/ChangeLog,v 1.76 2010/09/07 06:42:48 ford_prefect Exp $
+
+  07 Sep 2010; Arun Raghavan <ford_prefect@gentoo.org>
+  libgpod-0.7.94.ebuild:
+  Inherit mono to avoid sandbox violations.
 
 *libgpod-0.7.94 (05 Sep 2010)
 
